nộp bt ngày 24/11/2022

--- a/ss4/exercise/src/main/webapp/WEB-INF/views/list.html
+++ b/ss4/exercise/src/main/webapp/WEB-INF/views/list.html
@@ -20,14 +20,10 @@
 <div align="center">
     <a role="button" class="btn btn-primary" href="/create">Create Product</a>
 </div>
-<nav class="navbar navbar-light bg-light">
-    <div class="container-fluid">
-        <form class="d-flex" action="/search">
-            <input name="name" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
+        <form  th:action="@{/search}" method="post">
+            <input name="name"  type="text" placeholder="Search" >
+            <button  type="submit">Search</button>
         </form>
-    </div>
-</nav>
 <p style="font-weight: bold;color: red" th:text="${msg}"></p>
 <table class="table">
     <thead>
