--- a/ss8/exercise1/src/main/resources/templates/create.html
+++ b/ss8/exercise1/src/main/resources/templates/create.html
@@ -14,8 +14,8 @@
     <h1>Create User</h1>
     <a th:href="@{/list}" role="button" class="btn btn-primary">Back list</a>
 </div>
-<form th:method="post" th:action="@{/create}" th:object="${users}">
-    <input required th:type="hidden" th:field="*{id}">
+<form th:method="post" th:action="@{/create}" th:object="${userDTO}">
+<!--    <input  th:type="hidden" th:field="*{id}">-->
     <div class="mb-3">
         <label>First Name: </label>
         <input class="form-control" th:type="text" th:field="*{firstName}"><br>
