--- a/ss8/exercise1/src/main/resources/templates/list.html
+++ b/ss8/exercise1/src/main/resources/templates/list.html
@@ -37,5 +37,12 @@
     </tr>
     </tbody>
 </table>
+<div>
+    <a role="button" class="btn btn-primary" th:href="@{'/list'(page=${music.number - 1})}"
+       th:if="${music.hasPrevious()}">Previous</a>
+    <span th:text="${music.number + 1}"></span>/<span th:text="${music.totalPages}"></span>
+    <a role="button" class="btn btn-primary" th:href="@{'/list'(page=${music.number + 1})}" th:if="${music.hasNext()}">Next</a>
+</div>
+
 </body>
 </html>
