--- a/ss8/exercise2/src/main/resources/templates/create.html
+++ b/ss8/exercise2/src/main/resources/templates/create.html
@@ -14,7 +14,7 @@
     <h1>Create User</h1>
     <a th:href="@{/list}" role="button" class="btn btn-primary">Back list</a>
 </div>
-<form th:method="post" th:action="@{/create}" th:object="${music}">
+<form th:method="post" th:action="@{/create}" th:object="${musicDTO}">
     <input required th:type="hidden" th:field="*{id}">
     <div class="mb-3">
         <label>Name: </label>
