nộp bt ngày 02/12/2022

--- a/ss9/exercise1/src/main/resources/templates/index.html
+++ b/ss9/exercise1/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
             <td><a th:href="@{{id}/borrow(id=${list.id})}">Muon Sach</a></td>
             <td><a th:href="@{{id}/return(id=${list.id})}">Tra Sach</a></td>
         </tr>
-
     </table>
+</div>
 </body>
 </html>
