--- a/ss14/exercise2/src/main/resources/templates/create.html
+++ b/ss14/exercise2/src/main/resources/templates/create.html
@@ -12,7 +12,7 @@
 <body>
 <div align="center">
     <h1>Create User</h1>
-    <a th:href="@{/list}" role="button" class="btn btn-primary">Back list</a>
+    <a th:href="@{/}" role="button" class="btn btn-primary">Back list</a>
 </div>
 <form th:method="post" th:action="@{/create}" th:object="${musicDTO}">
     <input required th:type="hidden" th:field="*{id}">
