--- a/ss14/exercise2/src/main/resources/templates/edit.html
+++ b/ss14/exercise2/src/main/resources/templates/edit.html
@@ -12,7 +12,7 @@
 <body>
 <div align="center">
     <h1>Edit Blog</h1>
-    <a role="button" class="btn btn-primary" th:href="@{/list}">Back list</a>
+    <a role="button" class="btn btn-primary" th:href="@{/}">Back list</a>
 </div>
 <form action="/edit" th:method="post" th:object="${musicDTO}">
     <input th:type="hidden" th:field="*{id}">
