--- a/case_study/src/main/resources/templates/customer/list.html
+++ b/case_study/src/main/resources/templates/customer/list.html
@@ -30,11 +30,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Employee
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
                             <li><a class="dropdown-item" th:href="@{/employee/list}">List Employee</a></li>
                         </ul>
                     </li>
@@ -66,7 +66,8 @@
         <br>
         <div align="center">
             <h1>List Customer</h1>
-            <a role="button" class="btn btn-primary">Create Customer</a>
+            <a th:href="@{/customer/create}" role="button" class="btn btn-primary">Create Customer</a>
+            <p style="font-weight: bold;color: red" th:text="${msg}"></p>
         </div>
         <br>
         <table class="table table-striped table-bordered" style="width: 100%;">
