--- a/ss14/exercise2/src/main/resources/templates/create.html
+++ b/ss14/exercise2/src/main/resources/templates/create.html
@@ -15,7 +15,7 @@
     <a th:href="@{/}" role="button" class="btn btn-primary">Back list</a>
 </div>
 <form th:method="post" th:action="@{/create}" th:object="${musicDTO}">
-    <input required th:type="hidden" th:field="*{id}">
+    <input th:type="hidden" th:field="*{id}">
     <div class="mb-3">
         <label>Name: </label>
         <input class="form-control" th:type="text" th:field="*{name}"><br>
