--- a/case_study/src/main/resources/templates/customer/edit.html
+++ b/case_study/src/main/resources/templates/customer/edit.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Create Customer</title>
+    <title>Edit Customer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -69,52 +69,55 @@
             </div>
         </div>
     </nav>
-    <div style="height: 70%" >
+    <div style="height: 70%">
+        <br>
         <div align="center">
-            <h1>Create Customer</h1>
+            <h1>Edit Customer</h1>
             <a role="button" class="btn btn-primary" th:href="@{/customer/list}">Back list</a>
         </div>
-        <form th:method="post" th:action="@{/customer/create}" th:object="${customerDto}" >
+        <br>
+        <form th:method="post" th:action="@{/customer/edit}" th:object="${customerDto}">
             <input th:type="hidden" th:field="*{id}">
             <div class="mb-3">
-                <label>Name:</label>
+                <label th:for="name">Name:</label>
                 <input class="form-control" th:type="text" th:field="*{name}">
             </div>
             <div class="mb-3">
-                <label>Date Of Birth:</label>
+                <label th:for="dateOfBirth">Date Of Birth:</label>
                 <input class="form-control" th:type="date" th:field="*{dateOfBirth}">
             </div>
             <div class="mb-3">
-                <label>Gender:</label>
+                <label th:for="gender">Gender:</label>
                 <input th:type="radio" th:field="*{gender}" th:value="1" }>Male
                 <input th:type="radio" th:value="2" th:field="*{gender}" }>Female
             </div>
             <div class="mb-3">
-                <label>Id Card:</label>
-                <input th:type="text" th:field="*{idCard}" class="form-control" >
+                <label th:for="idCard">Id Card:</label>
+                <input th:type="text" th:field="*{idCard}" class="form-control">
             </div>
             <div class="mb-3">
-                <label>Phone number:</label>
+                <label th:for="phoneNumber">Phone number:</label>
                 <input class="form-control" th:type="text" th:field="*{phoneNumber}">
             </div>
             <div class="mb-3">
-                <label>Email:</label>
+                <label th:for="email">Email:</label>
                 <input th:type="text" class="form-control" th:field="*{email}">
             </div>
             <div class="mb-3">
-                <label>Address:</label>
+                <label th:for="address">Address:</label>
                 <input th:type="text" class="form-control" th:field="*{address}">
             </div>
             <div class="mb-3">
-                <label>Customer Type:</label>
-                    <select th:field="*{customerType}">
-                            <option th:each="customerType : ${customerType}" th:value="${customerType.id}"
+                <label th:for="customerType">Customer Type:</label>
+                <select th:field="*{customerType}">
+                    <option th:each="customerType : ${customerType}" th:value="${customerType.id}"
                             th:text="${customerType.name}"></option>
-                    </select>
+                </select>
             </div>
-                <input role="button" class="btn btn-primary" th:type="submit" th:value="Create">
+            <input role="button" class="btn btn-primary" th:type="submit" th:value="Edit">
         </form>
     </div>
 </div>
+
 </body>
 </html>
