--- a/case_study/src/main/resources/templates/facility/list.html
+++ b/case_study/src/main/resources/templates/facility/list.html
@@ -35,11 +35,11 @@
                             Employee
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                            <li><a class="dropdown-item" th:href="@{/employee/list}">List Employee</a></li>
+                            <li><a class="dropdown-item">List Employee</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a style="font-weight: bold" class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Customer
                         </a>
@@ -48,7 +48,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2"
+                        <a style="font-weight: bold" class="nav-link dropdown-toggle" href="#" id="navbarDropdown2"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Facility
                         </a>
@@ -60,27 +60,18 @@
                         <a class="nav-link" href="#">Contract</a>
                     </li>
                 </ul>
-                <form th:action="@{/customer/list}" method="get">
-                    <input th:type="text" name="name" placeholder="Search Name">
-                    <input th:type="text" name="email" placeholder="Search Email">
-                    <select th:name="customerType">
-                        <option value="" selected>
-                            Choose Customer Type
-                        </option>
-                        <option
-                                th:each="item : ${customerTypeList}"
-                                th:value="${item.name}" th:text="${item.name}">
-                        </option>
-                    </select>
-                    <input th:type="submit" name="action" value="Search">
+                <form style="margin-top: 23px" method="post">
+                    <input type="search" name="search" placeholder="Search name">
+
+                    <input type="submit" value="Search" class="btn btn-info">
                 </form>
             </div>
         </div>
     </nav>
-    <div style="    height: 70%">
+    <div style=" height: 60%">
         <div align="center">
             <h1>List Customer</h1>
-            <a th:href="@{/customer/create}" role="button" class="btn btn-primary">Create Customer</a>
+            <a th:href="@{/facility/create}" role="button" class="btn btn-primary">Create Facility</a>
             <p style="font-weight: bold;color: red" th:text="${msg}"></p>
         </div>
         <table class="table table-striped table-bordered" style="width: 100%;">
@@ -88,67 +79,70 @@
             <tr>
                 <th scope="col">STT</th>
                 <th scope="col">Name</th>
-                <th scope="col">Date of birth</th>
-                <th scope="col">Gender</th>
-                <th scope="col">Id Card</th>
-                <th scope="col">Phone Number</th>
-                <th scope="col">Email</th>
-                <th scope="col">Address</th>
-                <th scope="col">Customer Type</th>
+                <th scope="col">Area</th>
+                <th scope="col">Cost</th>
+                <th scope="col">Max People</th>
+                <th scope="col">Standard Room</th>
+                <th scope="col">Description Other Convenience</th>
+                <th scope="col">Pool Area</th>
+                <th scope="col">Number Of Floors</th>
+                <th scope="col">Facility Free</th>
+                <th scope="col">Facility Type</th>
+                <th scope="col">Rent Type</th>
                 <th scope="col">Edit</th>
                 <th scope="col">Delete</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="customer, stt : ${customers}">
-                <th scope="row" th:text="${stt.count} + ${customers.number} * ${customers.size}"></th>
-                <td th:text="${customer.name}"></td>
-                <td th:text="${customer.dateOfBirth}"></td>
-                <td th:if="${customer.gender} == 0" th:text="Female"></td>
-                <td th:if="${customer.gender} == 1" th:text="Male"></td>
-                <td th:if="${customer.gender} == 2" th:text="LGBT"></td>
-                <td th:text="${customer.idCard}"></td>
-                <td th:text="${customer.phoneNumber}"></td>
-                <td th:text="${customer.email}"></td>
-                <td th:text="${customer.address}"></td>
-                <td th:text="${customer.customerType.name}"></td>
-                <td><a th:href="@{/customer/edit?id=__${customer.id}__}" role="button" class="btn btn-primary">Edit</a>
-                <td><a th:href="@{/customer/delete?id=__${customer.id}__}" role="button"
-                       class="btn btn-primary">Delete</a>
-                </td>
+            <tr th:each="facilitie, stt : ${facilities}">
+                <th scope="row" th:text="${stt.count} + ${facilities.number} * ${facilities.size}"></th>
+                <td th:text="${facilitie.name}"></td>
+                <td th:text="${facilitie.area}"></td>
+                <td th:text="${facilitie.cost}"></td>
+                <td th:text="${facilitie.maxPeople}"></td>
+                <td th:text="${facilitie.standardRoom}"></td>
+                <td th:text="${facilitie.descriptionOtherConvenience}"></td>
+                <td th:text="${facilitie.poolArea}"></td>
+                <td th:text="${facilitie.numberOfFloors}"></td>
+                <td th:text="${facilitie.facilityFree}"></td>
+                <td th:text="${facilitie.facilityType.name}"></td>
+                <td th:text="${facilitie.rentType.name}"></td>
+                <!--                <td><a th:href="@{/customer/edit?id=__${customer.id}__}" role="button" class="btn btn-primary">Edit</a>-->
+                <!--                <td><a th:href="@{/customer/delete?id=__${customer.id}__}" role="button" class="btn btn-primary">Delete</a>-->
+                <!--                </td>-->
             </tbody>
         </table>
         <nav aria-label="..." class="justify-content-center d-flex">
             <ul class="pagination">
                 <li class="page-item">
-                    <a class="page-link" th:href="@{'/customer/list'(page=${customers.number - 1})}"
-                       th:if="${customers.hasPrevious()}">&laquo;</a>
+                    <a class="page-link" th:href="@{'/facility/list'(page=${facilities.number - 1})}"
+                       th:if="${facilities.hasPrevious()}">&laquo;</a>
                 </li>
-                <li class="page-item disabled" th:unless="${customers.hasPrevious()}">
+                <li class="page-item disabled" th:unless="${facilities.hasPrevious()}">
                     <a class="page-link">&laquo;</a>
                 </li>
 
                 <li class="page-item">
-                    <a class="page-link" th:href="@{'/customer/list'(page=${customers.number - 1})}"
-                       th:if="${customers.hasPrevious()}" th:text="${customers.number}"></a>
+                    <a class="page-link" th:href="@{'/facility/list'(page=${facilities.number - 1})}"
+                       th:if="${facilities.hasPrevious()}" th:text="${facilities.number}"></a>
                 </li>
 
                 <li class="page-item active">
-                    <a class="page-link" th:href="@{'/customer/list'(page=${customers.number})}"
-                       th:text="${customers.number + 1}">
+                    <a class="page-link" th:href="@{'/facility/list'(page=${facilities.number})}"
+                       th:text="${facilities.number + 1}">
                         <span class="sr-only">(trang hiện tại)</span></a>
                 </li>
 
                 <li class="page-item">
-                    <a class="page-link" th:href="@{'/customer/list'(page=${customers.number+1})}"
-                       th:text="${customers.number+2}" th:if="${customers.hasNext()}"></a>
+                    <a class="page-link" th:href="@{'/facility/list'(page=${facilities.number+1})}"
+                       th:text="${facilities.number+2}" th:if="${facilities.hasNext()}"></a>
                 </li>
 
                 <li class="page-item">
-                    <a class="page-link" th:href="@{'/customer/list'(page=${customers.number+1})}"
-                       th:if="${customers.hasNext()}">&raquo;</a>
+                    <a class="page-link" th:href="@{'/facility/list'(page=${facilities.number+1})}"
+                       th:if="${facilities.hasNext()}">&raquo;</a>
                 </li>
-                <li class="page-item disabled" th:unless="${customers.hasNext()}">
+                <li class="page-item disabled" th:unless="${facilities.hasNext()}">
                     <a class="page-link">&raquo;</a>
                 </li>
             </ul>
@@ -156,28 +150,28 @@
     </div>
 </div>
 <footer class="text-center text-lg-start bg-light text-muted">
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <div>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-twitter"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
-                <i class="fab fa-github"></i>
-            </a>
-        </div>
-    </section>
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <div>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+        </section>
     <section class="">
         <div class="container text-center text-md-start mt-5">
             <div class="row mt-3">
