--- a/case_study/src/main/resources/templates/customer/edit.html
+++ b/case_study/src/main/resources/templates/customer/edit.html
@@ -90,6 +90,7 @@
                 <label th:for="gender">Gender:</label>
                 <input th:type="radio" th:field="*{gender}" th:value="1" }>Male
                 <input th:type="radio" th:value="2" th:field="*{gender}" }>Female
+                <input th:type="radio" th:value="3" th:field="*{gender}" }>LGBT
             </div>
             <div class="mb-3">
                 <label th:for="idCard">Id Card:</label>
