--- a/case_study/src/main/resources/templates/facility/list.html
+++ b/case_study/src/main/resources/templates/facility/list.html
@@ -3,7 +3,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List Customer</title>
+    <title>List Facility</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -60,17 +60,25 @@
                         <a class="nav-link" href="#">Contract</a>
                     </li>
                 </ul>
-                <form style="margin-top: 23px" method="post">
-                    <input type="search" name="search" placeholder="Search name">
-
-                    <input type="submit" value="Search" class="btn btn-info">
+                <form th:action="@{/facility/list}" method="get">
+                    <input th:type="text" name="name" placeholder="Search Name">
+                    <select th:name="facilityType">
+                        <option value="" selected>
+                            Choose Facility Type
+                        </option>
+                        <option
+                                th:each="item : ${facilityTypeList}"
+                                th:value="${item.name}" th:text="${item.name}">
+                        </option>
+                    </select>
+                    <input th:type="submit" name="action" value="Search">
                 </form>
             </div>
         </div>
     </nav>
     <div style=" height: 60%">
         <div align="center">
-            <h1>List Customer</h1>
+            <h1>List Facility</h1>
             <a th:href="@{/facility/create}" role="button" class="btn btn-primary">Create Facility</a>
             <p style="font-weight: bold;color: red" th:text="${msg}"></p>
         </div>
@@ -94,22 +102,48 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="facilitie, stt : ${facilities}">
+            <tr th:each="facility, stt : ${facilities}">
                 <th scope="row" th:text="${stt.count} + ${facilities.number} * ${facilities.size}"></th>
-                <td th:text="${facilitie.name}"></td>
-                <td th:text="${facilitie.area}"></td>
-                <td th:text="${facilitie.cost}"></td>
-                <td th:text="${facilitie.maxPeople}"></td>
-                <td th:text="${facilitie.standardRoom}"></td>
-                <td th:text="${facilitie.descriptionOtherConvenience}"></td>
-                <td th:text="${facilitie.poolArea}"></td>
-                <td th:text="${facilitie.numberOfFloors}"></td>
-                <td th:text="${facilitie.facilityFree}"></td>
-                <td th:text="${facilitie.facilityType.name}"></td>
-                <td th:text="${facilitie.rentType.name}"></td>
-                <!--                <td><a th:href="@{/customer/edit?id=__${customer.id}__}" role="button" class="btn btn-primary">Edit</a>-->
-                <!--                <td><a th:href="@{/customer/delete?id=__${customer.id}__}" role="button" class="btn btn-primary">Delete</a>-->
-                <!--                </td>-->
+                <td th:text="${facility.name}"></td>
+                <td th:text="${facility.area}"></td>
+                <td th:text="${facility.cost}"></td>
+                <td th:text="${facility.maxPeople}"></td>
+                <td th:text="${facility.standardRoom}"></td>
+                <td th:text="${facility.descriptionOtherConvenience}"></td>
+                <td th:text="${facility.poolArea}"></td>
+                <td th:text="${facility.numberOfFloors}"></td>
+                <td th:text="${facility.facilityFree}"></td>
+                <td th:text="${facility.facilityType.name}"></td>
+                <td th:text="${facility.rentType.name}"></td>
+                <!--                <td><a th:href="@{/facility/edit?id=__${facility.id}__}" role="button" class="btn btn-primary">Edit</a>-->
+                <td>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                        Delete
+                    </button>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                         aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Delete Facility</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Do you want to delete this <p style="font-weight: bold; color: red; display: inline"
+                                                                  th:text="${facility.name}"></p> facility ?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                                    </button>
+                                    <a th:href="@{/facility/delete?id=__${facility.id}__}" role="button"
+                                       class="btn btn-primary">Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
             </tbody>
         </table>
         <nav aria-label="..." class="justify-content-center d-flex">
@@ -150,28 +184,28 @@
     </div>
 </div>
 <footer class="text-center text-lg-start bg-light text-muted">
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <div>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-instagram"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-        </section>
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <div>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </section>
     <section class="">
         <div class="container text-center text-md-start mt-5">
             <div class="row mt-3">
