--- a/case_study/src/main/resources/templates/home.html
+++ b/case_study/src/main/resources/templates/home.html
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a style="font-weight: bold" class="nav-link dropdown-toggle" href="#" id="navbarDropdown2"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Facility
                         </a>
