nộp casestudy ngày 13/12/2022

--- a/case_study/src/main/resources/templates/facility/create.html
+++ b/case_study/src/main/resources/templates/facility/create.html
@@ -56,8 +56,13 @@
                             <li><a class="dropdown-item" th:href="@{/facility/list}">List Facility</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item" style="margin-left: 10px">
-                        <a class="nav-link" href="#">Contract</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Contract
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
+                            <li><a class="dropdown-item">List Contract</a></li>
+                        </ul>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -78,7 +83,7 @@
             <input th:type="hidden" th:field="*{id}">
             <div class="mb-3">
                 <label>Facility Type: </label>
-                <select id="change" onchange="facility()" th:field="${facilityType}">
+                <select id="change" onchange="facility()" th:field="${facilityDto.facilityType}">
                     <option value="" selected>Select Facility Type</option>
                     <option th:each="ft : ${facilityType}" th:value="${ft.id}"
                             th:text="${ft.name}"></option>
@@ -103,7 +108,7 @@
             </div>
             <div class="mb-3">
                 <label>Rent Type:</label>
-                <select th:field="${rentType}">
+                <select th:field="${facilityDto.rentType}">
                     <option th:each="rt : ${rentType}" th:value="${rt.id}"
                             th:text="${rt.name}"></option>
                 </select>
