--- a/case_study/src/main/resources/templates/facility/list.html
+++ b/case_study/src/main/resources/templates/facility/list.html
@@ -56,8 +56,14 @@
                             <li><a class="dropdown-item" th:href="@{/facility/list}">List Facility</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item" style="margin-left: 10px">
-                        <a class="nav-link" href="#">Contract</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Contract
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
+                            <li><a class="dropdown-item">List Contract</a></li>
+                        </ul>
                     </li>
                 </ul>
                 <form th:action="@{/facility/list}" method="get">
@@ -115,7 +121,7 @@
                 <td th:text="${facility.facilityFree}"></td>
                 <td th:text="${facility.facilityType.name}"></td>
                 <td th:text="${facility.rentType.name}"></td>
-                <!--                <td><a th:href="@{/facility/edit?id=__${facility.id}__}" role="button" class="btn btn-primary">Edit</a>-->
+                <td><a th:href="@{/facility/edit?id=__${facility.id}__}" role="button" class="btn btn-primary">Edit</a>
                 <td>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Delete
