--- a/case_study/src/main/resources/templates/home.html
+++ b/case_study/src/main/resources/templates/home.html
@@ -55,11 +55,13 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4"
+                           role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             Contract
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
-                            <li><a class="dropdown-item">List Contract</a></li>
+                            <li><a th:href="@{/contract/list}" class="dropdown-item">List Contract</a></li>
                         </ul>
                     </li>
                 </ul>
