--- a/case_study/src/main/resources/templates/customer/list.html
+++ b/case_study/src/main/resources/templates/customer/list.html
@@ -35,7 +35,7 @@
                             Employee
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                            <li><a class="dropdown-item" >List Employee</a></li>
+                            <li><a class="dropdown-item">List Employee</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -57,17 +57,21 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4"
+                           role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             Contract
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown4">
-                            <li><a class="dropdown-item">List Contract</a></li>
+                            <li><a th:href="@{/contract/list}" class="dropdown-item">List Contract</a></li>
                         </ul>
                     </li>
                 </ul>
-                <form th:action="@{/customer/list}" method="get">
-                    <input th:type="text" name="name" placeholder="Search Name">
-                    <input th:type="text" name="email" placeholder="Search Email">
+                <form th:action="@{/customer/list}" class="d-flex">
+                    <input th:type="text" name="name" class="form-control me-2" type="search" placeholder="Search"
+                           aria-label="Search Name">
+                    <input th:type="text" name="email" class="form-control me-2" type="search" placeholder="Search"
+                           aria-label="Search Email">
                     <select th:name="customerType">
                         <option value="" selected>
                             Choose Customer Type
@@ -77,7 +81,7 @@
                                 th:value="${item.name}" th:text="${item.name}">
                         </option>
                     </select>
-                    <input th:type="submit" name="action" value="Search">
+                    <button class="btn btn-primary" type="submit">Search</button>
                 </form>
             </div>
         </div>
@@ -122,30 +126,30 @@
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Delete
                     </button>
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                     aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Do you want to delete this <p style="font-weight: bold; color: red; display: inline"
-                                                              th:text="${customer.name}"></p> customer ?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
-                                </button>
-                                <a th:href="@{/customer/delete?id=__${customer.id}__}" role="button"
-                                   class="btn btn-primary">Delete</a>
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                         aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Do you want to delete this <p style="font-weight: bold; color: red; display: inline"
+                                                                  th:text="${customer.name}"></p> customer ?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                                    </button>
+                                    <a th:href="@{/customer/delete?id=__${customer.id}__}" role="button"
+                                       class="btn btn-primary">Delete</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-            </td>
+                </td>
             </tr>
             </tbody>
         </table>
